??? Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.27-1

* Add in list of clusters to 'Add Host' window 
  - thanks for Stanislas Rouvelin for the idea
* Fix bug where unresolvable host stopped program running
  - thanks to Sami Kerola

2009-06-02 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.26-1

* Allow user to set a different ConnectTimeout and -o string (Tony Mancill)
* Fix warning from 'mandb' (Tony Mancill)
* Continue connecting to unresolvable hosts (debian bug 499935) (Tony Mancill)
* Correct bug with unset default ports (Tony Mancill)
* Rearrange pod documentation to remove extraenous comment (Tony Mancill)
* Cope better with IPv6 addresses
* Fix bug with passing arguments from command line to comms method binary
* Rework defaultport code
* Add new "-a 'command'" option for running a command in each terminal
* Fix bug with some host lookups failing
* Set window hints on terminals slightly differently to help with tiling
* Reserve 5 pixels on top and left hand side of terminals for better tiling
* Increase reserve of screen from bottom from 40 pixels to 60
* Better notes in docs for screen/terminal reserving
* Minor fixup to docs formatting
* Correct pasting mechanism into control window
* Allow use of long options (swap Getopt::Std to Getopt::Long)
* Remove deprecated '-i' option
* Deprecate -d and -D, replaced with --debug
* Allow for configurable max number of hosts within hosts menu before
  starting a new column - see .csshrc doc for "max_host_menu_items".
  This is until Tk allows for scrollable menus
* Amend default key_addhost from 'Control-plus' to 'Control-Shift-plus'
* Add in a 'default' cluster tag, used when no tags provided on command line
* Fix Alt-n pasting in a resolved hostname instead of the connection hostname 
* Disabled unmapping code until such time as a better way of doing it exists 
  - this is due to virtual desktop change triggering a retile 

2009-03-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.25-1
