@@ -4,6 +4,8 @@
   - thanks for Stanislas Rouvelin for the idea
 * Fix bug where unresolvable host stopped program running
   - thanks to Sami Kerola
+* Add in config for auto-tearoff of send and host menus
+  - thanks to James Chernikov for the idea
 
 2009-06-02 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.26-1
 
